--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
